Removed all references to DevExpress and had to resolve some issues with dynamic proxies.

--- a/KetoSavageWeb/KetoSavageWeb/Views/Web.config
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Web.config
@@ -15,7 +15,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.UI.WebControls" />
-        <add namespace="DevExpress.Utils" />
+        <!--<add namespace="DevExpress.Utils" />
         <add namespace="DevExpress.Web.ASPxThemes" />
         <add namespace="DevExpress.Web" />
         <add namespace="DevExpress.Web.Mvc" />
@@ -34,7 +34,7 @@
         <add namespace="DevExpress.XtraReports.UI" />
         <add namespace="DevExpress.XtraReports.Web" />
         <add namespace="DevExpress.XtraReports.Web.DocumentViewer" />
-        <add namespace="DevExpress.DashboardWeb.Mvc" />
+        <add namespace="DevExpress.DashboardWeb.Mvc" />-->
         <add namespace="DevExtreme.AspNet.Mvc" />
         <add namespace="System.Web.Optimization" />
       </namespaces>
