Updated the configs

--- a/KetoSavageWeb/KetoSavageWeb/Web.Release.config
+++ b/KetoSavageWeb/KetoSavageWeb/Web.Release.config
@@ -13,7 +13,13 @@
         connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
+
   -->
+  <connectionStrings>
+    <add name="KSDataConnection"
+      connectionString="Data Source=162.249.5.100;Initial Catalog=KSData;User ID=incontro_KS;Password=S4v4g3*18;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
