--- a/KetoSavageWeb/KetoSavageWeb/Web.Debug.config
+++ b/KetoSavageWeb/KetoSavageWeb/Web.Debug.config
@@ -14,6 +14,11 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <connectionStrings>
+    <add name="KSDataConnection"
+      connectionString="Data Source=162.249.5.100;Initial Catalog=KSDataStaging;User ID=incontro_KS;Password=S4v4g3*18;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
   <system.web>
     <!--
       In the example below, the "Replace" transform will replace the entire 
