--- a/KetoSavageWeb/KetoSavageWeb/Web.Release.config
+++ b/KetoSavageWeb/KetoSavageWeb/Web.Release.config
@@ -17,7 +17,7 @@
   -->
   <connectionStrings>
     <add name="KSDataConnection"
-      connectionString="Data Source=162.249.5.100;Initial Catalog=KSData;User ID=incontro_KS;Password=S4v4g3*18;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"
+      connectionString="Server=tcp:razoredge.database.windows.net,1433;Initial Catalog=KSData;Persist Security Info=False;User ID=re_admin;Password=R4z0r3dg3!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30" providerName="System.Data.SqlClient"
       xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>
   <system.web>
