--- a/KetoSavageWeb/KetoSavageWeb/Web.config
+++ b/KetoSavageWeb/KetoSavageWeb/Web.config
@@ -25,7 +25,8 @@
     <!--<add name="KSDataConnection" connectionString="Data Source=13-01-0110;Initial Catalog=KSData;User ID=KS;Password=S4v4g3*18;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>-->
     <!--<add name="KSDataConnection" connectionString="Data Source=RD_Laptop;Initial Catalog=KSData;Integrated Security = true;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="KSDataConnection" connectionString="Data Source=ops-dev.savageservices.com;Initial Catalog=KSData;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
-    <add name="KSDataConnection" connectionString="Data Source=162.249.5.100;Initial Catalog=KSDataStaging;User ID=incontro_KS;Password=S4v4g3*18;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <!--<add name="KSDataConnection" connectionString="Data Source=162.249.5.100;Initial Catalog=KSDataStaging;User ID=incontro_KS;Password=S4v4g3*18;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
+    <add name ="KSDataConnection" connectionString="Server=tcp:razoredge.database.windows.net,1433;Initial Catalog=KSData;Persist Security Info=False;User ID=re_admin;Password=R4z0r3dg3!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
